# Bit-Buy-ICP

./: Cargo.toml  READ.md  README.md  dfx.json  package-lock.json  package.json
src/bit_buy_icp_backend/: Cargo.toml  bit_buy_icp_backend.did
src/bit_buy_icp_backend/src/: hashing.rs  lib.rs
src/bit_buy_icp_frontend/: index.html  package.json  vite.config.js
src/bit_buy_icp_frontend/src/: App.jsx  index.css
src/bit_buy_icp_frontend/src/pages/Cart/: Cart.jsx  ItemCard.jsx
